// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`post input updates with keystrokes and clears on submit 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="postContainer"
  >
    <textarea
      className="entryBox"
      onChange={[Function]}
      placeholder="content"
      value=""
    />
    <input
      disabled={true}
      type="submit"
      value="Post"
    />
  </div>
</form>
`;

exports[`post input updates with keystrokes and clears on submit 2`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="postContainer"
  >
    <textarea
      className="entryBox"
      onChange={[Function]}
      placeholder="content"
      value="hello,world"
    />
    <input
      disabled={false}
      type="submit"
      value="Post"
    />
  </div>
</form>
`;
